--- a/app/src/main/res/layout/activity_update_info.xml
+++ b/app/src/main/res/layout/activity_update_info.xml
@@ -40,9 +40,9 @@
             android:textSize="20sp"
             />
         <TextView
+            android:id="@+id/email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="abcd@gmail.com"
             android:layout_marginStart="30dp"
             android:textSize="15sp"
             />
@@ -56,45 +56,30 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="비밀번호"
+            android:text="이름"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:textSize="20sp"
             />
-        <EditText
-            android:layout_width="130dp"
-            android:layout_height="match_parent"
-            android:hint="8자리 이상"/>
-        <Button
+        <TextView
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="70dp"
+            android:layout_marginEnd="30dp"
+            android:textSize="15sp"
+            />
+        <Button
+            android:id="@+id/editButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:text="수정"/>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="휴대폰 번호"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="30dp"
-            android:textSize="20sp"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="010-0000-0000"
-            android:layout_marginStart="40dp"
-            android:textSize="15sp"
-            />
-    </LinearLayout>
 
     <Button
+        android:id="@+id/completeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
