--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -16,7 +16,9 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="left"
+        app:headerLayout="@layout/main_drawer_header"
         app:menu="@menu/main_drawer_navigation">
+
 
     </com.google.android.material.navigation.NavigationView>
 
