--- a/app/src/main/res/layout/donate_list_activity_main.xml
+++ b/app/src/main/res/layout/donate_list_activity_main.xml
@@ -17,6 +17,18 @@
         app:title="기부 현황"
         app:titleTextColor="@android:color/white" />
 
+    <ImageView
+        android:id="@+id/img_donate2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:contentDescription="donatedAmountToImage"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar2"
+        tools:src="@tools:sample/avatars[6]" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
@@ -24,7 +36,8 @@
         app:layoutManager="LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
+        app:layout_constraintTop_toBottomOf="@+id/img_donate" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
