--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="#FFFFFF"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -7,11 +9,11 @@
     android:weightSum="2560">
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_weight="200"
         android:gravity="center"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="200"
         android:weightSum="1440">
 
         <TextView
@@ -20,57 +22,60 @@
             android:layout_height="wrap_content"
             android:text="장바구니"
             android:textAlignment="center"
-            android:textSize="10pt"
             android:textColor="#000000"
+            android:textSize="10pt"
             android:textStyle="bold" />
 
     </LinearLayout>
 
     <!-- 장바구니 탭 끝 (weight 200 사용, 2360 남음) -->
 
-    <LinearLayout
-        android:gravity="center"
-        android:orientation="horizontal"
+    <ScrollView
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="210"
-        android:layout_marginBottom="15dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:fillViewport="true">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/cart_item"/>
+            />
+    </ScrollView>
+    <LinearLayout
+        android:id="@+id/linear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         >
 
-        <CheckBox
-            android:id="@+id/all_Check"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="115dp"
-            android:text="전체선택" />
+            android:layout_margin="10dp"
+            android:text="합계: "
+            android:textSize="10pt"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/sumMoney"
+            android:layout_width="148dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:paddingStart="50dp"
+            android:text="0원"
+            android:textSize="10pt"
+            android:textStyle="bold" />
 
         <Button
-            android:id="@+id/all_Delete"
+            android:id="@+id/buyItem"
             android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:layout_marginStart="60dp"
-            android:text="삭제하기"
-            android:textSize="7pt"
-            android:onClick="onClick" />
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:text="주문하기" />
 
     </LinearLayout>
-
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2150"
-        >
-
-        <LinearLayout
-            android:id="@+id/dynamicView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:orientation="vertical">
-        </LinearLayout>
-    </ScrollView>
-
 
 </LinearLayout>
