--- a/app/src/main/res/layout/donate_list_activity_main.xml
+++ b/app/src/main/res/layout/donate_list_activity_main.xml
@@ -20,13 +20,14 @@
     <ImageView
         android:id="@+id/img_donate2"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:contentDescription="donatedAmountToImage"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/recycler_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar2"
+        app:layout_constraintVertical_bias="0.0"
         tools:src="@tools:sample/avatars[6]" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -34,10 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layoutManager="LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
-        app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_donate" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
