--- a/app/src/main/res/layout/intro_page.xml
+++ b/app/src/main/res/layout/intro_page.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#8491C8">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView"
-        android:layout_marginBottom="0dp"
         android:scaleType="centerInside"
         app:srcCompat="@drawable/aggim_intro_image" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="false"
-        android:layout_centerVertical="true"
+        android:layout_height="match_parent"
+        android:layout_marginTop="100dp"
         android:gravity="center_horizontal|center_vertical"
         android:singleLine="false"
-        android:text="원하는 만큼만 사고,\n부족한 만큼 기부하고\n나는 무료로 배송받자"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        android:text="원하는 만큼만 사고,\n 부족한 만큼 기부하고\n나는 무료로 배송받자"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#FFFFFF" />
+
 </RelativeLayout>
