--- a/app/src/main/res/layout/donate_item.xml
+++ b/app/src/main/res/layout/donate_item.xml
@@ -7,12 +7,39 @@
     android:gravity="center"
     android:textAlignment="center">
 
-    <TextView
-        android:id="@+id/tv_donate"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/item_cardview"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="TextView"
-        android:textAlignment="textEnd" />
+        android:layout_margin="1dp"
+        app:cardUseCompatPadding="true"
+        app:cardElevation="5dp"
+        app:cardCornerRadius="3dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/item_tv_donate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18dp"
+                android:text="content"
+                android:paddingBottom="5dp"/>
+            <ImageView
+                android:src="@drawable/drawable_dash_line"
+                android:layerType="software"
+                android:layout_width="match_parent"
+                android:layout_height="1.5dp" />
+            <TextView
+                android:id="@+id/tv_donate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="TextView"
+                android:textAlignment="textEnd" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
