--- a/app/src/main/res/layout/header_item.xml
+++ b/app/src/main/res/layout/header_item.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_centerInParent="true"
+    android:padding="10dp"
+    android:clipToPadding="false">
 
     <ImageView
         android:id="@+id/img_donate"
         android:layout_width="match_parent"
-        android:layout_height="210dp"/>
+        android:layout_height="180dp"
+        android:background="#ffffff"
+        android:elevation="5dp"
+        />
 
 </LinearLayout>
