--- a/app/src/main/res/layout/donation_management_item.xml
+++ b/app/src/main/res/layout/donation_management_item.xml
@@ -14,7 +14,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
+        android:layout_marginLeft="30dp"
         android:layout_marginTop="10dp"
         android:textSize="18dp"
         android:id="@+id/dm_percent"
@@ -25,8 +25,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="30dp"
-        android:text="기부하기"
+        android:layout_marginLeft="10dp"
+        android:text="Donate"
         android:textColor="@color/colorButtonText"
         android:backgroundTint="@color/colorButton" />
 
